# banco

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TRIBUTACAO_EXCLUSIVA_ANALYSIS.md  debug_documentai.py  docker-compose.test.yml  docker-compose.yml  env.example  env.gcs.example  llm_extraction_results.json  pyproject.toml  response_1778088816568.json  test_extract_section_pages.py  test_llm_extraction.py  test_llm_extraction_irpf_parser.py
.github/workflows/: ci.yml  terraform.yml
benchmark_results/: VISION_BENCHMARK_REPORT.md  batch_test_20260123_054616.json  batch_test_full.json  benchmark_results.json
compare/: pdfs_necessarios.txt
compare/AMOSTR1/: 0132_IRPF_9750982991-IRPF-2025-2024-origi-imagem-declaracao_GABARITO.json  0132_IRPF_9750982991-IRPF-2025-2024-origi-imagem-declaracao_resultado.json  0242_IRPF_EC. IRPF 2025-2024 ROZANY_GABARITO.json  0242_IRPF_EC. IRPF 2025-2024 ROZANY_resultado.json  0276_IRPF_ECLARAÇÃO 2025-2024 WIENFRIED_resultado.json  0779_IRPF_RPF Renato Declaração 2024 2025_resultado.json  1052_IRPF_oberto98884662087-IRPF-2024-2023_resultado.json  1084_IRPF_elmo Antonio Cervi - IRPF 2023-24 Declaração_resultado.json
compare/JsonMirro/quality/: comparador_json.py
compare/JsonMirror/: README.md
compare/JsonMirror/quality/: comparador_json.py
compare/benchmark_results/: benchmark_20260123_000313.json  benchmark_20260123_000346.json
docs/: DEBTS_EXTRACTOR_FIX_PLAN.md  DIMENSA_PARITY_REPORT.md  FINAL_PARITY_REPORT.md  GABARITO_COMPARISON_REPORT.md  OBSERVABILIDADE_LOCAL.html  OBSERVABILIDADE_LOCAL.md  VISION_BENCHMARK_REPORT.md
docs/81758/: ANALISE_BUG_81758_ITEMS.md
docs/81762/: 17195532895-IRPF-2025-2024-origi-imagem-declaracao.json  17195532895-IRPF-2025-2024-origi-imagem-declaracao_GABARITO.json  ANALISE_BUG_81762.md
docs/IRPF/: Geral-IRPF-2025-2024_resultado 2.json
docs/architecture/: ARCHITECTURE.md  OVERVIEW.md  PARSER_TEMPLATES.md  PDF_EXTRACTION.md
exemplos/GENESIS/: IRPF-Renda Variavel GABARITO.json  new_res.json  relatorio_comparacao 1 (1).html  relatorio_comparacao 2.html  relatorio_comparacao.html  relatorio_comparacao_maria.html  response_1768920730648.json
exemplos/MARIA_FATIMA/: 0001_IRPF_Maria de Fa´tima] IRPF 2025 - Declarac¸a~o_resultado.json  relatorio_comparacao_maria.html  response_1768927185299.json
exemplos/NATALIA/: IRPF-Bens e Direito GABARITO.json  relatorio_comparacao_natalia.html  response_1768925965875.json
infrastructure/terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/terraform-gcp/: .gitignore  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/terraform-gcp/scripts/: bootstrap.sh  destroy.sh  push-images.sh
infrastructure/terraform/scripts/: bootstrap.sh  deploy.sh  destroy.sh  push-images.sh
monitoring/: README.md
monitoring/prometheus/: prometheus.yml
scripts/: batch_test.py  batch_test_local.py  batch_vision_benchmark.py  benchmark_dimensa.py  compare_vision_parser.py  e2e_test.py  e2e_test.sh  reprocess_confidence.py  reset_and_setup.sh  reset_metrics.sh  run_e2e_tests.py  run_tests.sh  update_deps_lock.sh
src/irpf_processor/: __init__.py  config.py  main.py
src/irpf_processor/application/: __init__.py
src/irpf_processor/cli/: __init__.py  create_api_key.py  generate_scanned_pdfs.py  generate_test_models.py  sync_layouts.py
src/irpf_processor/domain/: __init__.py
src/irpf_processor/infrastructure/: __init__.py
src/irpf_processor/presentation/: __init__.py
src/irpf_processor/shared/: __init__.py  instrumentation.py  logging.py  metrics.py  tracing.py
src/irpf_processor/templates/: __init__.py  models.py  registry.py
tarefas/: tarefas.txt
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_auth_flow.py  test_document_flow.py  test_health.py  test_search_flow.py
tests/fixtures/: __init__.py  documents.py
tests/integration/: __init__.py  test_api_health.py  test_auth_api.py  test_exempt_income_real_pdfs.py  test_full_irpf_parser.py  test_irpf_extraction.py
tests/integration/ocr/: test_ocr_orchestrator_real.py  test_pdf_type_detector_real.py  test_tesseract_engine_real.py
tests/unit/: __init__.py  test_api_documents.py  test_api_health.py  test_api_key.py  test_auth_exceptions.py  test_auth_service.py  test_confidence_calculator.py  test_config.py  test_domain.py  test_domain_events.py  test_domain_exceptions.py  test_extraction_context.py  test_extraction_result.py  test_field_extractors.py  test_irpf_parser.py  test_logging.py  test_receipt_parser.py  test_table_extractor.py  test_templates.py  test_text_extractor.py  test_validation_executor.py  test_value_objects.py  test_version_detector.py
tests/unit/api/: test_auth_dependencies.py  test_auth_models.py  test_documents_routes.py  test_search_utils.py
tests/unit/confidence/: test_ocr_confidence.py  test_professional_confidence.py
tests/unit/extraction/: test_safe_pdf_extractor.py
tests/unit/extractors/: test_assets_extractor.py  test_debts_extractor.py  test_debts_llm.py  test_new_extractors.py  (+19 more)
(+243 files in other folders)
