[project]
name = "irpf-processor"
version = "0.1.0"
description = "Plataforma de extração de dados de Declarações de Imposto de Renda (IRPF)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AsaBank", email = "dev@asabank.com" }
]

dependencies = [
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    
    # Workers
    "dramatiq[redis]>=1.15.0",
    
    # Database
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    
    # Redis
    "redis>=5.0.0",
    
    # Storage
    "boto3>=1.34.0",
    "google-cloud-storage>=2.14.0",
    
    # PDF Extraction
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "pypdf>=6.9.1",
    "openai >=0.27.8",
    
    # OCR
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "google-cloud-documentai>=2.30.0",
    
    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-stdnum>=1.19",
    
    # Templates
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    
    # Utils
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "nest-asyncio>=1.6.0",
    
    # Metrics
    "prometheus-client>=0.19.0",
    
    # Distributed Tracing (OpenTelemetry)
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "opentelemetry-instrumentation-pymongo>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-instrumentation-logging>=0.43b0",
    
    # HTTP Client & Scraping
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    
    # PDF Generation (test models)
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

ocr = [
    "docling>=1.0.0",
    "docling-core>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ===========================================
# RUFF (Linter + Formatter)
# ===========================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["irpf_processor"]

# ===========================================
# MYPY (Type Checking)
# ===========================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "dramatiq.*",
    "motor.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
    "pymupdf.*",
    "pdfplumber.*",
    "pytesseract.*",
    "pdf2image.*",
    "cv2.*",
    "docling.*",
    "google.cloud.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# ===========================================
# PYTEST
# ===========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (with I/O)",
    "e2e: End-to-end tests",
    "timeout: Test timeout in seconds",
]

# ===========================================
# COVERAGE
# ===========================================
[tool.coverage.run]
source = ["src/irpf_processor"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli/*",
    "*/data/*",
    "*/test_pdf_generator.py",
    "*/irpf_parser_v2.py",
    "*/layout_loader.py",
    "*/main.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.coverage.xml]
output = "coverage.xml"
